--- a/src/pages/RankingAnnouncement.css
+++ b/src/pages/RankingAnnouncement.css
@@ -1,9 +1,18 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%; /* 화면 전체 높이를 100%로 설정 */
+  overflow: hidden; /* 스크롤바가 생기지 않도록 숨김 */
+}
 /* 전체 화면에 중앙 정렬 */
 .ranking-container {
   position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  padding: 0; /* 패딩 제거 */
+  margin: 0; /* 마진 제거 */
   background: rgba(0, 0, 0, 0.5); /* 배경을 살짝 어둡게 */
 }
 
@@ -13,6 +22,19 @@
   left: 50%;
   transform: translateX(-50%);
   font-size: 4rem;
+  margin-bottom: 50px;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+}
+
+.ranking-title {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 4.5rem;
   margin-bottom: 50px;
   font-weight: bold;
   text-align: center;
@@ -70,28 +92,36 @@
 /* 전체 순위표 스타일 */
 .final-ranking {
   position: absolute;
-  top: 50%;
+  top: 25%; /* 상단에서 20% 떨어진 위치에 고정 */
   left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 900px;
-  padding: 20px;
+  transform: translateX(-50%);
+  width: 70%; /* 박스의 너비 고정 */
+  height: 60vh; /* 박스의 높이를 고정 (50% 화면 높이) */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 35px;
+  padding-right: 35px;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 15px;
   color: #fff;
   text-align: center;
   font-size: 3.5rem;
   z-index: 1;
-  /* opacity와 transition 제거 */
+  overflow-y: none; /* 내용이 길어지면 스크롤 생김 */
 }
 
 /* 채점 결과 스타일 */
 .score-result {
   position: absolute;
-  top: 50%;
+  top: 25%; /* 상단에서 20% 떨어진 위치에 고정 */
   left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 900px;
-  padding: 20px;
+  transform: translateX(-50%);
+  width: 70%; /* 박스의 너비 고정 */
+  height: 68vh; /* 박스의 높이를 고정 (50% 화면 높이) */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 35px;
+  padding-right: 35px;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 15px;
   color: #fff;
@@ -100,29 +130,65 @@
   opacity: 0;
   transition: opacity 1s ease-in-out;
   z-index: 2; /* final-ranking보다 위에 위치 */
+  overflow-y: none;
 }
 
 .score-result.show {
   opacity: 1;
 }
 
-@keyframes glow {
-  0% {
-    text-shadow: 0 0 5px #ffcc00, 0 0 10px #ff6600, 0 0 15px #ff6600,
-      0 0 20px #ff3300;
-  }
-  100% {
-    text-shadow: 0 0 10px #ffcc00, 0 0 20px #ff6600, 0 0 30px #ff3300,
-      0 0 40px #ff0000;
-  }
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 24px; /* 글자 크기를 크게 설정 */
+  font-family: sans-serif;
+  text-align: center; /* 텍스트 가운데 정렬 */
 }
 
-/* p 스타일 조정 (소속 스타일) */
-.ranking-item p {
-  font-size: 4rem; /* 글자 크기 증가 */
-  font-weight: 600;
-  margin: 10px 0;
+.styled-table thead tr {
+  background-color: #009879;
   color: #ffffff;
-  word-wrap: break-word; /* 긴 단어를 줄바꿈 처리 */
-  white-space: normal; /* 긴 텍스트 줄바꿈 */
+  text-align: center;
+  font-size: 28px; /* 헤더 글자 크기 */
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 15px 15px; /* 셀의 패딩을 늘려서 더 크게 보이게 설정 */
+  border: 1px solid #dddddd;
+}
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.1
+  ); /* 짝수 행의 배경 색을 연하게 설정 */
+}
+
+.styled-table thead th {
+  background-color: #333333;
+  color: white;
+}
+
+/* 최저점과 최고점을 시각적으로 구분하기 위한 스타일 추가 */
+.min-score {
+  background-color: #696969;
+  color: #dfdfdf;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.max-score {
+  background-color: #696969;
+  color: #dfdfdf;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 5px;
 }
